리므디 또 수정

--- a/work3/test2.html
+++ b/work3/test2.html
@@ -2,54 +2,16 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8" />
-    <title>Emmet Abbrevitaion</title>
+    <title>Emmet Quiz</title>
 </head>
 <body>
-  .active
-
-  p.img
-
-  #content
-  
-  table#list
-
-  #list.active
-
-  table#list.active
-
-  .list-item.on
-
-  .list-item.on.active.name
-
-   section>p>div^img^div
-
-   ul>li{list item $$}*10
-
-   a*5[href="image$$.jpg" alt="logo"]
-
-   ul>li*5[class=item$$]
-
-   div{내용}     
-
-   
-    BRAND
-    E-SHOP
-    EVENT
-    COMMUNITY
+  div.list-container>ul>li*5.class$[title="", alt=""]
 
 
-    div.colors>span*6[style="background:#..."]
-
-    section.section*3>h1.section-title{$번째 섹션}+p{섹션소개텍스트}
-
-    table.table-list>tr>th{ID}+th{name}+th{email}+th{phone}^tr>td{ID}+td{name}+td{email}+td{phone}
-
-    div.search>button.search-btn{SEARCH}+div.search-window>div.search-window-inner>form[action="" method=""]>input.form-input[type="text" placeholder="search"]+button.form-btn{SEARCH}
-
-    ID
-    name
-    email
-    phone
+  소개
+  작업물
+  문의
+  질문과 답변
 
 </body>
 </html> 
